[package]
name = "py-timekeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_timekeeper"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
tpom = { path = "../tpom" }
lazy_static = "1.4.0"
chrono = "0.4.23"

[dev-dependencies]
serial_test = "0.9.0"
